fixe update of BoxProduct when there is already the same product with the same Size in the box

--- a/versions/v0.2/mmbx/content/css/elements.css
+++ b/versions/v0.2/mmbx/content/css/elements.css
@@ -3089,7 +3089,8 @@ by indicating the width of the class .slider-nb_acticle-width_indicator
         /* overflow: auto; */
     }
     #size_editor_pop .product-quantity-container {
-        margin-bottom: 5px;
+        /* margin-bottom: 5px; */
+        margin: 30px 0 25px;
     }
     #size_editor_pop .product-size-dropdown-container {
         margin-bottom: 5px;
