--- a/versions/v0.2/mmbx/content/css/elements.css
+++ b/versions/v0.2/mmbx/content/css/elements.css
@@ -75,7 +75,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     font-weight: normal;
-    z-index: 1;
+    z-index: var(--z-index-body_1);
 }
 
 .select-inner .select-tag {
@@ -158,7 +158,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     font-weight: normal;
-    z-index: 1;
+    z-index: var(--z-index-body_1);
 }
 
 .mini-select-inner .mini-select-tag {
@@ -202,7 +202,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     font-weight: normal;
-    z-index: 1;
+    z-index: var(--z-index-body_1);
 }
 
 .input-unit {
@@ -218,7 +218,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     font-weight: normal;
-    z-index: 1;
+    z-index: var(--z-index-body_1);
 }
 
 .input-wrap .input-tag {
@@ -1240,13 +1240,14 @@ by indicating the width of the class .slider-nb_acticle-width_indicator
     opacity: 1;
     transition: var(--transition-time-picture);
     -moz-transition: var(--transition-time-picture);
-    z-index: 1;
+    z-index: var(--z-index-body_1);
 }
 
 .product-article-wrap .product-img-set .product-img-second {
     position: absolute;
     top: 0;
-    z-index: 5;
+    /* z-index: 5; */
+    z-index: var(--z-index-body_2);
 }
 
 .product-article-wrap .product-img-set .product-img-second {
@@ -2244,7 +2245,8 @@ by indicating the width of the class .slider-nb_acticle-width_indicator
     height: 100%;
     top: 0;
     background-color: var(--color-white);
-    z-index: 6;
+    /* z-index: 6; */
+    z-index: var(--z-index-body_1);
     transition: var(--transition-time);
     -moz-transition: var(--transition-time);
 }
@@ -2337,7 +2339,8 @@ by indicating the width of the class .slider-nb_acticle-width_indicator
     color: var(--color-text);
     /* backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px); */
-    z-index: 100;
+    /* z-index: 100; */
+    z-index: var(--z-index-popup_21);
 }
 
 #full_screen_div .pop_up-container {
@@ -2382,7 +2385,7 @@ by indicating the width of the class .slider-nb_acticle-width_indicator
     border: var(--border-float);
     box-shadow: var(--box-shadow);
     font-family: var(--main-font-family);
-    z-index: 100;
+    /* z-index: 100; */
 }
 
 .pop_up-inner {
@@ -2496,7 +2499,7 @@ by indicating the width of the class .slider-nb_acticle-width_indicator
 
 .popup-selected {
     box-shadow: var(--selected-shadow) !important;
-    z-index: 5;
+    /* z-index: 5; */
 }
 
 /*++++ SELECT UP +++++*/
@@ -2559,7 +2562,7 @@ by indicating the width of the class .slider-nb_acticle-width_indicator
     border-radius: var(--border-float-radius);
     transition: var(--transition-time-picture);
     -moz-transition: var(--transition-time-picture);
-    z-index: 1;
+    z-index: var(--z-index-body_1);
 }
 
 .brand_reference-grid-img-block .first-img-div img {
@@ -2570,7 +2573,8 @@ by indicating the width of the class .slider-nb_acticle-width_indicator
     position: absolute;
     top: 0;
     border-radius: var(--border-float-radius);
-    z-index: 5;
+    /* z-index: 5; */
+    z-index: var(--z-index-body_1);
     opacity: 0;
     transition: var(--transition-time-picture);
     -moz-transition: var(--transition-time-picture);
@@ -2580,9 +2584,9 @@ by indicating the width of the class .slider-nb_acticle-width_indicator
     border-radius: var(--border-float-radius);
 }
 
-.brand_reference-grid-container .selected_element_shadow {
+/* .brand_reference-grid-container .selected_element_shadow {
     opacity: 1 !important;
-}
+} */
 
 #brandPopUp_loading img {
     width: auto;
@@ -2905,7 +2909,8 @@ by indicating the width of the class .slider-nb_acticle-width_indicator
     position: absolute;
     /* width: 175px; */
     cursor: auto;
-    z-index: 5;
+    /* z-index: 5; */
+    z-index: var(--z-index-body_4);
 }
 
 .minipop-content {
