--- a/versions/v0.2/mmbx/content/css/grid.css
+++ b/versions/v0.2/mmbx/content/css/grid.css
@@ -1,3 +1,11 @@
+:root {
+    --filter-mobile-h: 35px;
+}
+
+.navbar-mobile {
+    box-shadow: none !important;
+}
+
 .detail-price-div .piano-wrap {
     margin-bottom: 20px;
 }
@@ -101,8 +109,7 @@
 
 @media (max-width: 991px) {
     body {
-        top: 140px;
-        /* Header's Height + Filter's Height */
+        top: calc(var(--header-mobile-height) + var(--filter-mobile-h)) !important;
     }
     .grid-item-container {
         display: flex;
@@ -117,10 +124,10 @@
         display: flex;
         position: fixed;
         width: 100%;
-        height: 35px;
+        /* height: 35px; */
+        height: var(--filter-mobile-h);
         padding: 5px 10px;
-        /* top: 100px; */
-        top: var(--body-top-mobile);
+        top: var(--header-mobile-height);
         left: 0;
         background-color: var(--color-white);
         font-size: var(--middle-font-size);
@@ -128,7 +135,8 @@
         text-transform: capitalize;
         box-shadow: var(--box-shadow);
         border-radius: 0 0 5px 5px;
-        z-index: var(--z-index-header-fixed);
+        /* z-index: var(--z-index-header-fixed); */
+        z-index: var(--z-index-body_3);
     }
     .filter-button-block {
         margin: auto;
@@ -159,9 +167,11 @@
         display: none;
         position: fixed;
         width: 100%;
-        top: 135px;
-        background-color: var(--color-white);
-        z-index: 100;
+        /* top: 135px; */
+        top: calc(var(--header-mobile-height) + var(--filter-mobile-h));
+        /* background-color: var(--color-white); */
+        /* z-index: 100; */
+        z-index: var(--z-index-body_3);
     }
     .filter-block p {
         display: none;
@@ -174,6 +184,9 @@
     .filter-block .dropdown-container {
         margin: 0 auto 35px;
         max-width: 250px;
+    }
+    .filter-block .dropdown-container .dropdown-wrap {
+        background-color: var(--color-white);
     }
     .filter-block .apply-button-container {
         margin: 0 auto 35px;
